Bug 692595 - memory leaks in gp_unix_cache.c
Summary: memory leaks in gp_unix_cache.c
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-14 16:01 UTC by Tim Waugh
Modified: 2011-10-30 04:11 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
0002-Fixed-memory-leak-in-gp_unix_cache.c-found-using-Cov.patch (1.34 KB, patch)
2011-10-14 16:01 UTC, Tim Waugh
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Waugh 2011-10-14 16:01:46 UTC
Created attachment 8005 [details]
0002-Fixed-memory-leak-in-gp_unix_cache.c-found-using-Cov.patch

There are some memory leaks in gp_unix_cache.c, found using Coverity.
Comment 1 Alex Cherepanov 2011-10-30 04:11:35 UTC
The patch has been adopted and committed as a rev. 
af01406940d211167c202cbc54c3ff7ad31d5c0e

Thank you for your contribution to Ghostscript.