Bug 692595: fix memory leaks in gp_unix_cache.c

There were some memory leaks in gp_unix_cache.c, found using Coverity.